z-index fix

--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@ ul { list-style-type: none; }
 }
 
 /* SECTION HEADER */
-.section-header { width: 100%; height: 90px; background-color: white; position: fixed; font-size: 14px; color: #9a9a9a; letter-spacing: 1px; }
+.section-header { width: 100%; height: 90px; background-color: white; position: fixed; font-size: 14px; color: #9a9a9a; letter-spacing: 1px; z-index: 100;}
 .section-header-inner { display: flex; flex-direction: row; }
 .section-header img { height: 40px; }
 .section-header img:hover { cursor: pointer; }
